--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,85 @@
-body{
+body {
 	padding: 20px;
 }
+
 /* index */
-#top{
+#top {
 	text-align: right;
 	padding-right: 30px;
 }
-#top li{
+
+#top li {
 	display: inline;
-	padding:10px;
+	padding: 10px;
 	border-radius: 10px;
 }
 
-#top .active{
-	background: rgba(188,218,245,1);
+#top .active {
+	background: rgba(188, 218, 245, 1);
 
 }
 
-#top li:hover{
-	background: rgba(188,218,245,0.4);
+#top li:hover {
+	background: rgba(188, 218, 245, 0.4);
 }
 
-#logo{
+#logo {
 	margin-bottom: 30px;
 }
 
-#text{
+#text {
 	text-align: center;
 	padding: 30px;
 }
 
-#text p{
+#text p {
 	text-align: center;
-	font-size:20px;
+	font-size: 20px;
 }
+
 /*main*/
 
-#menu{
+#menu {
 	float: left;
-	height:50%;
+	height: 50%;
 	width: 100%;
 	min-width: 200px;
 }
 
-#content{
+#content {
 	text-align: center;
 	padding: 30px;
-	padding-top:30px;
+	padding-top: 30px;
 }
 
-#content p{
+#content p {
 	font-size: 20px;
 }
 
 /* sign in */
 
-#form_sign, #form_signup{
+#form_sign, #form_signup {
 	border: 2px solid #85CCE9;
 	background: #f5f5f5;
 	margin-top: 10%;
 }
 
-.profile_inp{
+.profile_inp {
 	padding-top: 30px;
 }
-#form_profile{
+
+#form_profile {
 	width: 70%;
 }
 
-#alert{
+#alert {
 	margin: 10px auto;
 	width: 35%;
 }
 
-#show{
+#show {
 	bottom: 0;
-	left:0;
+	left: 0;
 	position: fixed;
 	z-index: 1000;
 }
