--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,37 @@ body {
 #comments blockquote{
 	margin:0;
 	/*border-bottom: 1px solid rgba(84, 84, 84, 0.1);*/
-
+	transition: .9s;
 }
+
+#comments blockquote button{
+	margin:0;
+	/*border-bottom: 1px solid rgba(84, 84, 84, 0.1);*/
+	transition: .9s;
+}
+
+#comments blockquote:hover{
+	margin:0;
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.3);
+	transition: .9s;
+}
+
+#comments blockquote:hover button{
+	/*box-shadow: 0 -1px rgba(25, 25, 25, 0.31) inset;*/
+	font-weight: bold;
+	text-decoration: none;
+	text-shadow: 0 -1px rgba(0,0,0,.5);
+	padding: .7em 1.5em;
+	outline: none;
+	box-shadow:
+		0 6px rgba(0, 0, 0, 0.2),
+		0 3px 15px rgba(0,0,0,.2),
+		inset 0 1px rgba(255,255,255,.3),
+		inset 0 0 3px rgba(255,255,255,.5);
+	transition: .9s;
+}
+
+
 /* sign in */
 
 #form_sign, #form_signup {
