--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
 	margin:0;
 	/*border-bottom: 1px solid rgba(84, 84, 84, 0.1);*/
 	transition: .9s;
+	word-wrap:break-word;
 }
 
 #comments blockquote button{
