--- a/css/style.css
+++ b/css/style.css
@@ -120,13 +120,19 @@ background-color: #000;
 	border-radius: 4px;
 	border-style: solid;
 }
-.form-horizontal div span{
+.form-horizontal .ads{
 	width:130px;
 }
-
-.form-horizontal div{
-	margin-bottom: 5px;
+.padingf{
+	margin-bottom: 10px !important;
 }
+
+
+
+#add-comment{
+	padding-top: 20px;
+}
+
 
 .to-select{
 	padding: 6px 12px;
